# gi-tcg-cbinding

./: .gitignore  CMakeLists.txt  README.md  fix_msvc_19.42.patch
.github/workflows/: cmake.yml
src/: environment.cpp  environment.h  game.cpp  game.h  main.cpp
